2011-02-07  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Daniel Bates.

        [GTK] fast/history/history-subframe-with-name.html fails with GTK DRT
        https://bugs.webkit.org/show_bug.cgi?id=44784

        * platform/gtk/Skipped: Unskip tests which are now passing.
2011-02-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Daniel Bates.

        [GTK] fast/history/history-subframe-with-name.html fails with GTK DRT
        https://bugs.webkit.org/show_bug.cgi?id=44784

        Call FrameLoader::loadURLIntoChildFrame on the parent frame's loader, not the child's.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::createFrame): Fix the call to FrameLoader::loadURLIntoChildFrame.

Canonical link: https://commits.webkit.org/67879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77818 268f45cc-cd09-0410-ab3c-d52691b4dbfc