Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp
@@ -607,7 +607,7 @@ PassRefPtr<Frame> FrameLoaderClient::createFrame(const KURL& url, const String& 
 
     g_signal_emit_by_name(webView, "frame-created", kitFrame);
 
-    childFrame->loader()->loadURLIntoChildFrame(url, referrer, childFrame.get());
+    parentFrame->loader()->loadURLIntoChildFrame(url, referrer, childFrame.get());
 
     // The frame's onload handler may have removed it from the document.
     if (!childFrame->tree()->parent())
